--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
@@ -7,9 +7,9 @@
 <body>
 <div id='header'>
 <a href="http://ссылка на сайт.ru"><img src="bird.png" alt="header"/>Шапка сайта. Добро пожаловать на мой сайт</a>
-    </div>
+	</div>
 <div id='content'>
-    <p>Контент. Здесь может быть абсолютно любая информация.</p>
+	<p>Контент. Здесь может быть абсолютно любая информация.</p>
 </div>
 <div id='footer'>
 Футер. Подвал. Нижняя часть сайта
