--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <a href="http://ссылка на сайт.ru"><img src="bird.png" alt="header"/>Шапка сайта. Добро пожаловать на мой сайт</a>
 	</div>
 <div id='content'>
+
+<iframe src="https://money.yandex.ru/quickpay/shop-widget?writer=buyer&targets=&targets-hint=&default-sum=&button-text=14&hint=&successURL=&quickpay=shop&account=4100115217731456" width="422" height="216" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
+
+
 	<p>Контент. Здесь может быть абсолютно любая информация.</p>
 </div>
 <div id='footer'>
