--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="style.css">
-<title>Заголовок страницы</title>
+	<link rel="stylesheet" href="style.css">
+	<title>Заголовок страницы</title>
 </head>
 <body>
-<div id='header'>
-<a href="http://ссылка на сайт.ru"><img src="bird.png" alt="header"/>Шапка сайта. Добро пожаловать на мой сайт</a>
+	<div id='header'>
+		<a href="http://ссылка на сайт.ru"><img src="bird.png" alt="header" />Шапка сайта. Добро пожаловать на мой
+			сайт</a>
 	</div>
-<div id='content'>
-
-<iframe src="https://money.yandex.ru/quickpay/shop-widget?writer=buyer&targets=&targets-hint=&default-sum=&button-text=14&hint=&successURL=&quickpay=shop&account=4100115217731456" width="422" height="216" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
-
-
-	<p>Контент. Здесь может быть абсолютно любая информация.</p>
-</div>
-<div id='footer'>
-Футер. Подвал. Нижняя часть сайта
-</div>
+	<div id='content'>
+		<iframe
+			src="https://money.yandex.ru/quickpay/shop-widget?writer=buyer&targets=&targets-hint=&default-sum=&button-text=14&hint=&successURL=&quickpay=shop&account=4100115217731456"
+			width="422" height="216" frameborder="0" allowtransparency="true" scrolling="no">
+		</iframe>
+		<p>Контент. Здесь может быть абсолютно любая информация.</p>
+	</div>
+	<div id='footer'>
+		Футер. Подвал. Нижняя часть сайта
+	</div>
 </body>
 </html>
