--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div id='header'>
-		<a href="http://ссылка на сайт.ru"><img src="bird.png" alt="header" />Шапка сайта. Добро пожаловать на мой
+		<a href="http://dmitryborisenko33.github.io"><img src="favicon.png" alt="header" />Шапка сайта. Добро пожаловать на мой
 			сайт</a>
 	</div>
 	<div id='content'>
