--- a/index.html
+++ b/index.html
@@ -1,23 +1,31 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
 	<link rel="stylesheet" href="style.css">
 	<title>Заголовок страницы</title>
 </head>
+
 <body>
 	<div id='header'>
-		<a href="http://dmitryborisenko33.github.io"><img src="favicon.png" alt="header" />Шапка сайта. Добро пожаловать на мой
-			сайт</a>
+		<a href="http://dmitryborisenko33.github.io"><img src="favicon.png" alt="header" />Добро пожаловать на сайт
+			поддержки прошивки</a>
 	</div>
+
 	<div id='content'>
-		<iframe
-			src="https://money.yandex.ru/quickpay/shop-widget?writer=buyer&targets=&targets-hint=&default-sum=&button-text=14&hint=&successURL=&quickpay=shop&account=4100115217731456"
-			width="422" height="216" frameborder="0" allowtransparency="true" scrolling="no">
-		</iframe>
-		<p>Контент. Здесь может быть абсолютно любая информация.</p>
+		<p>Любая сумма Вашего пожертвования будет приятна мне</p>
+		<center>
+			<iframe
+				src="https://money.yandex.ru/quickpay/shop-widget?writer=buyer&targets=&targets-hint=&default-sum=&button-text=14&hint=&successURL=&quickpay=shop&account=4100115217731456"
+				width="422" height="216" frameborder="0" allowtransparency="true" scrolling="no">
+			</iframe>
+		</center>
 	</div>
+	
 	<div id='footer'>
 		Футер. Подвал. Нижняя часть сайта
 	</div>
+
 </body>
+
 </html>
