--- a/index.html
+++ b/index.html
@@ -8,20 +8,19 @@
 
 <body>
 	<div id='header'>
-		<a href="http://dmitryborisenko33.github.io"><img src="favicon.png" alt="header" />Добро пожаловать на сайт
-			поддержки прошивки</a>
+		<a href="http://dmitryborisenko33.github.io">Добро пожаловать на сайт поддержки прошивки</a>
 	</div>
 
 	<div id='content'>
 		<p>Любая сумма Вашего пожертвования будет приятна мне</p>
 		<center>
 			<iframe
-				src="https://money.yandex.ru/quickpay/shop-widget?writer=buyer&targets=&targets-hint=&default-sum=&button-text=14&hint=&successURL=&quickpay=shop&account=4100115217731456"
+				src="https://money.yandex.ru/quickpay/shop-widget?writer=buyer&targets=&targets-hint=&default-sum=300&button-text=11&hint=&successURL=&quickpay=shop&account=4100115217731456"
 				width="422" height="216" frameborder="0" allowtransparency="true" scrolling="no">
 			</iframe>
 		</center>
 	</div>
-	
+
 	<div id='footer'>
 		Футер. Подвал. Нижняя часть сайта
 	</div>
