--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div id='header'>
-		<a href="http://dmitryborisenko33.github.io">Добро пожаловать на сайт поддержки прошивки</a>
+		<p>Добро пожаловать на сайт поддержки прошивки</p>
 	</div>
 
 	<div id='content'>
