--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<link rel="stylesheet" href="style.css">
-	<title>Заголовок страницы</title>
+	<title>Поддержи проект</title>
 </head>
 
 <body>
