--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div id='header'>
-		<p>Добро пожаловать на сайт поддержки прошивки</p>
+		<p>Добро пожаловать на страницу поддержки прошивки</p>
 	</div>
 
 	<div id='content'>
