--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<p>Любая сумма Вашего пожертвования будет приятна мне</p>
 		<center>
 			<iframe
-				src="https://money.yandex.ru/quickpay/shop-widget?writer=buyer&targets=&targets-hint=&default-sum=300&button-text=11&hint=&successURL=&quickpay=shop&account=4100115217731456"
+				src="https://money.yandex.ru/quickpay/shop-widget?writer=buyer&targets=%D0%9F%D0%BE%D0%B4%D0%B4%D0%B5%D1%80%D0%B6%D0%B8%20%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82&targets-hint=&default-sum=300&button-text=14&payment-type-choice=on&hint=&successURL=&quickpay=shop&account=4100115217731456"
 				width="422" height="216" frameborder="0" allowtransparency="true" scrolling="no">
 			</iframe>
 		</center>
