--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</center>
 	</div>
 	<div id='footer'>
-		Спасибо за поддержку и участие...
+		Спасибо за помощь и участие...
 	</div>
 
 </body>
