--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 				src="https://money.yandex.ru/quickpay/shop-widget?writer=buyer&targets=%D0%9F%D0%BE%D0%B4%D0%B4%D0%B5%D1%80%D0%B6%D0%B8%20%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82&targets-hint=&default-sum=300&button-text=14&payment-type-choice=on&hint=&successURL=&quickpay=shop&account=4100115217731456"
 				width="422" height="216" frameborder="0" allowtransparency="true" scrolling="no">
 			</iframe>
-			<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc5hFrY0KqShatg6avgBZP4P5q_1txxQOr8wljQeFe5Vf1frViY3DZdQSiHilc9w/pubhtml?widget=true&amp;headers=false"></iframe>
+			<iframe
+				src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc5hFrY0KqShatg6avgBZP4P5q_1txxQOr8wljQeFe5Vf1frViY3DZdQSiHilc9w/pubhtml?widget=true&amp;headers=false"></iframe>
 		</center>
 	</div>
 	<div id='footer'>
