--- a/config.html
+++ b/config.html
@@ -10,6 +10,15 @@
 	<div id='content'>
 		<iframe
 			src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc5hFrY0KqShatg6avgBZP4P5q_1txxQOr8wljQeFe5Vf1frViY3DZdQSiHilc9w/pubhtml?widget=true&amp;headers=false"></iframe>
+		<style type="text/css">
+			iframe {
+				position: absolute;
+				top: 0px;
+				left: 0px;
+				width: 100%;
+				height: 100%;
+			}
+		</style>
 	</div>
 </body>
 
