--- a/config.html
+++ b/config.html
@@ -9,7 +9,7 @@
 <body>
 	<div id='content'>
 		<iframe
-			src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc5hFrY0KqShatg6avgBZP4P5q_1txxQOr8wljQeFe5Vf1frViY3DZdQSiHilc9w/pubhtml?gid=1114896511&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+			src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRc5hFrY0KqShatg6avgBZP4P5q_1txxQOr8wljQeFe5Vf1frViY3DZdQSiHilc9w/pubhtml?widget=true&amp;headers=false"></iframe>
 		<style type="text/css">
 			iframe {
 				position: absolute;
