--- a/donat.html
+++ b/donat.html
@@ -12,6 +12,10 @@
 		<p>Добро пожаловать на страницу поддержки прошивки</p>
 	</div>
 
+	<div id='header'>
+		<p>Дмитрий Борисенко</p>
+	</div>
+
 	<div id='content'>
 		<center>
 			<iframe
@@ -20,6 +24,20 @@
 			</iframe>
 		</center>
 	</div>
+
+	<div id='header'>
+		<p>Юрий Трикоз</p>
+	</div>
+
+	<div id='content'>
+		<center>
+			<iframe
+				src="https://money.yandex.ru/quickpay/shop-widget?writer=buyer&targets=%D0%9F%D0%BE%D0%B4%D0%B4%D0%B5%D1%80%D0%B6%D0%B8%20%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82&targets-hint=&default-sum=300&button-text=14&payment-type-choice=on&hint=&successURL=&quickpay=shop&account=410017971667615"
+				width="422" height="216" frameborder="0" allowtransparency="true" scrolling="no">
+			</iframe>
+		</center>
+	</div>
+
 	<div id='footer'>
 		Спасибо за помощь и участие...
 	</div>
